Revise introduction section for clarity and flow
Updated the introduction section with clearer language and improved readability.

--- a/index.html
+++ b/index.html
@@ -161,34 +161,38 @@
     </section>
 
     <!-- ========= INTRODUCCIÓN ========= -->
-    <section id="introduccion" aria-labelledby="intro-title">
-      <h2 id="intro-title">Bienvenida e Introducción</h2>
+   
+<section id="introduccion" aria-labelledby="intro-title">
+  <h2 id="intro-title">Bienvenida e Introducción</h2>
 
-      <p><strong>Bienvenidos</strong> a este nuevo canal de YouTube llamado <em>Aprendiendo Idiomas</em>. En este canal aprenderemos el idioma <strong>Kichwa (Quichua)</strong> de Ecuador, especialmente <strong>el dialecto de Imbabura</strong>, que se habla en la parte norte del país (como en la ciudad de Otavalo y sus alrededores).</p>
+  <p>Este sitio es el punto de partida para aprender el idioma <strong>Kichwa (Quichua)</strong> de Ecuador, con un enfoque claro y práctico en <strong>el dialecto de Imbabura</strong>, hablado en la parte norte del país (como en la ciudad de Otavalo y sus alrededores).</p>
 
-      <p>El Kichwa (Quichua) y su variante, el <strong>Quechua</strong>, son lenguas originarias de Sudamérica. En la actualidad, tanto en <strong>Ecuador, Perú y Bolivia</strong>, el idioma principal es el español, pero <strong>gran parte de la población todavía se comunica en su lengua nativa</strong>.</p>
+  <p>El Kichwa (Quichua) y su variante, el <strong>Quechua</strong>, son lenguas originarias de Sudamérica. En la actualidad, en <strong>Ecuador, Perú y Bolivia</strong> el idioma principal es el español, pero <strong>gran parte de la población todavía se comunica en su lengua nativa</strong>.</p>
 
-      <div class="callout">
-        <strong>Idea clave:</strong> Aprender otro idioma nos abre a <em>otro mundo</em>, donde podemos <strong>romper barreras culturales</strong> y conectar mejor con las personas.
-      </div>
+  <div class="callout">
+    <strong>Idea clave:</strong> Aprender otro idioma nos abre a <em>otro mundo</em>, donde podemos <strong>romper barreras culturales</strong> y conectar mejor con las personas.
+  </div>
 
-      <h3>Verbos regulares en Kichwa</h3>
-      <p>Una característica interesante del Kichwa es que <strong>los verbos son regulares</strong>. A diferencia de otros idiomas, <strong>todos los verbos siguen las mismas reglas de conjugación</strong>. La <em>raíz</em> del verbo <strong>no cambia</strong>; conociendo las <em>terminaciones</em>, podrás conjugar <strong>cualquier verbo</strong> sin memorizar largas listas de irregulares.</p>
+  <h3>Verbos regulares en Kichwa</h3>
+  <p>Una característica interesante del Kichwa es que <strong>los verbos son regulares</strong>. A diferencia de otros idiomas, <strong>todos los verbos siguen las mismas reglas de conjugación</strong>. La <em>raíz</em> del verbo <strong>no cambia</strong>; conociendo las <em>terminaciones</em>, podrás conjugar <strong>cualquier verbo</strong> sin memorizar largas listas de irregulares.</p>
 
-      <h3>Las “partículas” (sufijos/morfemas)</h3>
-      <p>La parte más desafiante (¡pero totalmente alcanzable!) son las <strong>partículas</strong>. Son combinaciones de letras que se añaden a una palabra para <strong>resaltar su significado</strong> o <strong>dar sentido</strong> a la oración. En español se reconocen como <em>sufijos</em> o <em>morfemas</em>. Por ejemplo, añadir “-s” para hacer plural (carro → carros).</p>
+  <h3>Las “partículas” (sufijos/morfemas)</h3>
+  <p>La parte más desafiante (¡pero alcanzable!) son las <strong>partículas</strong>. Son combinaciones de letras que se añaden a una palabra para <strong>resaltar su significado</strong> o <strong>dar sentido</strong> a la oración. En español se reconocen como <em>sufijos</em> o <em>morfemas</em>. Por ejemplo, añadir “-s” para hacer plural (carro → carros).</p>
 
-      <p>Por eso, ayuda mucho saber un poco de <strong>gramática del español</strong>: te dará un <strong>punto de comparación</strong> útil al aprender Kichwa.</p>
+  <p>Por eso, ayuda mucho saber un poco de <strong>gramática del español</strong>: te dará un <strong>punto de comparación</strong> útil al aprender Kichwa.</p>
 
-      <h3>Variación según la región</h3>
-      <p>El Kichwa <strong>no es uniforme</strong>: el vocabulario, la pronunciación e incluso aspectos de la gramática <strong>cambian según la región</strong>. Por ejemplo, en Imbabura se dice “<strong>alilla</strong>” y en Riobamba “<strong>allilla</strong>”. Incluso <strong>dentro de Imbabura</strong> hay variación: algunos dicen “<strong>uchila</strong>” y otros “<strong>uchilla</strong>”. <strong>Ambas formas son correctas</strong>.</p>
+  <h3>Variación según la región</h3>
+  <p>El Kichwa <strong>no es uniforme</strong>: el vocabulario, la pronunciación e incluso aspectos de la gramática <strong>cambian según la región</strong>. Por ejemplo, en Imbabura se dice “<strong>alilla</strong>” y en Riobamba “<strong>allilla</strong>”. Incluso <strong>dentro de Imbabura</strong> hay variación: algunos dicen “<strong>uchila</strong>” y otros “<strong>uchilla</strong>”. <strong>Ambas formas son correctas</strong>.</p>
 
-      <div class="callout">
-        <strong>Consejo:</strong> Sé <em>adaptable</em> al idioma. Escucha con atención cómo lo hablan en tu comunidad y <strong>imita</strong> esas formas. Así hablarás más <strong>natural</strong> y te entenderán con mayor facilidad.
-      </div>
+  <div class="callout">
+    <strong>Consejo:</strong> Sé <em>adaptable</em> al idioma. Escucha con atención cómo lo hablan en tu comunidad y <strong>imita</strong> esas formas. Así hablarás más <strong>natural</strong> y te entenderán con mayor facilidad.
+  </div>
 
-      <p>¡Disfruta mucho aprendiendo este idioma!</p>
-    </section>
+  <p>Este curso incluye <strong>lecciones escritas</strong>, <strong>ejercicios</strong> y <strong>material audiovisual</strong> para reforzar lo aprendido. Si prefieres el formato video, encontrarás contenidos complementarios en el canal <em>Aprendiendo Idiomas</em>.</p>
+
+  <p>¡Disfruta mucho aprendiendo este idioma!</p>
+</section>
+
 
     <!-- ========= QUÉ APRENDERÁS ========= -->
     <section id="que-aprenderas" aria-labelledby="learn-title">
