--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- ========= METADATOS BÁSICOS ========= -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aprendiendo Idiomas — Curso de Kichwa (Quichua) | Introducción</title>
+  <title>Aprendiendo Idiomas — Curso de Kichwa (Quichua) Imbabura | Introducción</title>
   <meta name="description" content="Introducción al curso de Kichwa (Quichua) de Imbabura: verbos regulares, partículas, variación dialectal y consejos prácticos. Menú de próximas lecciones y video de YouTube." />
   <meta name="author" content="Aprendiendo Idiomas" />
 
