--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Aprendiendo Idiomas" />
 
   <!-- ========= OPEN GRAPH (para compartir) ========= -->
-  <meta property="og:title" content="Curso de Kichwa (Quichua) — Introducción" />
+  <meta property="og:title" content="Curso de Kichwa (Quichua) Imbabura — Introducción" />
   <meta property="og:description" content="Aprende Kichwa (Quichua) de Imbabura con un enfoque práctico. Menú de lecciones y video." />
   <meta property="og:type" content="website" />
   <!-- Reemplaza estos dos valores por tu dominio de GitHub Pages si quieres que se vea bien al compartir -->
